<resources>
    <string name="app_name">阅影</string>
    <string name="video">影视</string>
    <string name="video_collect">视频</string>
    <string name="bookself">书架</string>
    <string name="collect">收藏</string>
    <string name="navigation_drawer_open">打开侧边栏</string>
    <string name="navigation_drawer_close">关闭侧边栏</string>
    <string name="setting">设置</string>
    <string name="delete_site">删除该链接</string>
    <string name="move_top">移动至顶部</string>
    <string name="add_to_website_list">添加到网站列表</string>
    <string name="add_to_collect">添加到收藏</string>
    <string name="custom_add_to_web">自定义添加</string>
    <string name="clear_cache">清除缓存</string>
    <string name="net_error_10001">没有网络</string>
    <string name="net_error_10002">网络连接超时</string>
    <string name="net_error_10003">数据解析失败</string>
    <string name="page_mode_COVER" translatable="false">覆盖</string>
    <string name="page_mode_SIMULATION" translatable="false">仿真</string>
    <string name="page_mode_SLIDE" translatable="false">滑动</string>
    <string name="page_mode_SCROLL" translatable="false">滚动</string>
    <string name="page_mode_NONE">无动画</string>
    <string name="previous_chapter">上一章</string>
    <string name="next_chapter">下一章</string>
    <string name="chapter_list">目录</string>
    <string name="adjust">调节</string>
    <string name="interface_setting">界面</string>
    <string name="change_origin">换源</string>
    <string name="loading">加载中…</string>
    <string name="load_over_time">加载超时</string>
    <string name="load_error_msg">加载失败\n%s</string>
    <string name="content_empty">文章内容为空</string>
    <string name="chapter_list_empty">目录列表为空</string>
    <string name="on_change_source">正在换源请等待…</string>
    <string name="search">搜索</string>
    <string name="book_source">书源</string>
    <string name="all">全部</string>
    <string name="brightness">亮度</string>
    <string name="screen_unspecified">跟随系统</string>
    <string name="flow_sys">跟随系统</string>
    <string name="auto_next_page_speed">自动翻页间隔</string>
    <string name="screen_direction">屏幕方向</string>
    <string name="keep_light">屏幕超时</string>
    <string name="jf_convert">简繁转换</string>
    <string name="screen_sensor">跟随传感器</string>
    <string name="screen_landscape">横向</string>
    <string name="screen_portrait">竖向</string>
    <string name="jf_convert_o">关闭</string>
    <string name="jf_convert_f">简转繁</string>
    <string name="jf_convert_j">繁转简</string>
    <string name="text_bold">加粗</string>
    <string name="custom_font">字体</string>
    <string name="indent">缩进</string>
    <string name="page_mode">翻页模式</string>
    <string name="search_history_title">历史搜索</string>
    <string name="row_0">单倍</string>
    <string name="row_1">双倍</string>
    <string name="row_2">三倍</string>
    <string name="row_def">默认</string>
    <string name="custom_mr">自定义间距</string>

    <string name="text">文字</string>

    <string name="indent_0">无缩进</string>
    <string name="indent_1">一字符缩进</string>
    <string name="indent_2">二字符缩进</string>
    <string name="indent_3">三字符缩进</string>
    <string name="indent_4">四字符缩进</string>

    <string name="fonts_folder">您还没有字体资源，请去下载</string>
    <string name="select_font">选择字体</string>
    <string name="cancel">取消</string>
    <string name="default_font">默认字体</string>
    <string name="go_dwnload">下载</string>
    <string name="app_tag">阅    影</string>
    <string name="app_slogan">一个神奇的APP</string>
    <string name="donate">捐赠</string>
    <string name="alipay_code">支付宝二维码</string>
    <string name="wechat_code">微信二维码</string>
    <string name="alipay_pay">支付宝转账</string>
    <string name="disclaimer">免责声明</string>
    <string name="action_explore">探索</string>
    <string name="source_change">切换</string>
    <string name="string_disclaimers">&#8195;&#8195;&#8195;该APP给影视和阅读爱好者提供学习交流，不提供资源的上传，下载，存储。所有资源均来自互联网，所有版权皆属原公司所有，如果认为本APP侵犯了您的版权，请联系476793909@qq.com或搜索阅影微信公众号联系我们，我们会立即删除。</string>
    <string name="message_tip">消息提示</string>
    <string name="confirm">确定</string>
    <string name="tip_fullscreen_award">观看一段视频，全屏观看，体验更佳</string>
    <string name="tip_addToLibrary">观看一段视频添加到书架</string>
</resources>
