<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_action_search"
        android:title="@string/setting"
        app:showAsAction="ifRoom"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_donate"
        android:icon="@drawable/ic_donate"
        android:title="@string/donate"
        app:showAsAction="ifRoom"
        app:tint="@color/white" />
    <item
        android:id="@+id/custom_add_website"
        android:icon="@mipmap/ic_action_add"
        android:title="@string/custom_add_to_web"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_add_to_site"
        android:icon="@mipmap/ic_action_add"
        android:title="@string/add_to_website_list"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_add_to_collect"
        android:icon="@mipmap/ic_action_folder_tabs"
        android:title="@string/add_to_collect"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_clear_cache"
        android:icon="@mipmap/ic_action_trash"
        android:title="@string/clear_cache"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />

</menu>