<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View style="@style/Style.Shadow.Bottom" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/background_menu">

        <View
            android:id="@+id/vw_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_menu"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_screen_direction"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@color/background_menu"
                        android:orientation="horizontal"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:textColor="@color/menu_color_default"
                            android:text="@string/screen_direction" />

                        <TextView
                            android:id="@+id/tv_screen_direction"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/menu_color_default"
                            android:text="@string/screen_unspecified" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:background="@color/btn_bg_press" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_menu"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/llScreenTimeOut"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@color/background_menu"
                        android:orientation="horizontal"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:textColor="@color/menu_color_default"
                            android:text="@string/keep_light" />

                        <TextView
                            android:id="@+id/tv_screen_time_out"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/menu_color_default"
                            android:text="@string/keep_light" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:background="@color/btn_bg_press" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_menu"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/llJFConvert"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@color/background_menu"
                        android:orientation="horizontal"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:textColor="@color/menu_color_default"
                            android:text="@string/jf_convert" />

                        <TextView
                            android:id="@+id/tvJFConvert"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/menu_color_default"
                            android:text="@string/keep_light" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.8dp"
                        android:background="@color/btn_bg_press" />

                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</LinearLayout>